logs/pytasks.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytasks'...
Compiling './lib/python3.5/site-packages/pytasks/pytasks.py'...
***   File "./lib/python3.5/site-packages/pytasks/pytasks.py", line 142
    print filter(lambda e:not e.startswith('_'), dir(init_task_file))
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pytasks/tasks.py'...
***   File "./lib/python3.5/site-packages/pytasks/tasks.py", line 13
    print 'task1'
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pytasks/test.py'...
***   File "./lib/python3.5/site-packages/pytasks/test.py", line 13
    print self.taskid, ":", dt.now()-self.now
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pytasks/test_send_email.py'...
***   File "./lib/python3.5/site-packages/pytasks/test_send_email.py", line 15
    print time
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pytasks-1.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
